and keep track of all directory-tags.
It DOES NOT substitute the  CVS log-message one should put at every
committal in the CVS repository !

     ----------------------------------------------------------
     * Reverse chronological order (last date on top), please *
     ----------------------------------------------------------

September 4, 2014  T.Nikitina            geom-csg-V09-06-12
- G4Cons: fixed typo error in GetPointOnSurface() in the call
  to GetRadiusInRing(). Responsible for occasionally wrong reports
  when checking for overlaps.
- G4Cons: fix in DistanceToIn(p,v) for points on the Surface, to resolve
  error reported in unit testing by the OpticalEscape test.

September 1, 2014  G.Cosmo
- Fixed use of polyhedron pointer, to avoid race condition in MT
  when parameterised volumes are visualised.

March 5, 2014  G.Cosmo                   geom-csg-V09-06-11
- Fixed proper handling of polyhedron pointer in solids, to avoid memory
  leak for visualization of parameterised volumes.

February 12, 2014  G.Cosmo               geom-csg-V09-06-10
- Simply reset polyhedron pointer to zero for modifiers of G4U* wrappers
  in parameterisation. Resolves crash in MT visualization when using USolids. 

February 12, 2014  G.Cosmo
- Added correct cloning mechanism in G4U* wrappers.
  Addressing problem report #1553.

November 22, 2013  G.Cosmo               geom-csg-V09-06-09
- Correction to USolids wrappers for proper setting of name to base class.

November 20, 2013  T.Mikitina            geom-csg-V09-06-08
- Fixed Coverity defects to USolids wrappers.

November 14, 2013  T.Nikitina            geom-csg-V09-06-07
- Corrections to G4U* wrappers to allow for visualization of parameterisations.

November 7, 2013  G.Cosmo                geom-csg-V09-06-06
- Moved wrappers from usolids module.
  Fixed internal dispatcher method for parameterisation in all wrappers.
- Added switching mechanism for G4Box, G4Cons, G4Orb, G4Sphere, G4Trd
  and G4Tubs.